--- a/Core/templates/index.html
+++ b/Core/templates/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+    {% if recipe_name %}
+    <div id="deletePrompt">
+        <div id="deleteBox">
+            <p>Are you sure you want to delete {{ recipe_name }}?<br/><br/>
+                <a href="/deleteConfirm/{{recipe_id}}">Yes</a><a href="/">No</a></p>
+        </div>
+    </div>
+    {% endif %}
+
     <h1 style="text-align: center;">Welcome to Reci.py Manager</h1>
 
     <h2 style="text-align: center;">Recipe List</h2>
@@ -68,7 +77,7 @@
                 <td>
                     <a href="/view/{{recipe.id}}">View</a>
                     <a href="/edit/{{recipe.id}}">Edit</a>
-                    <a href="#">Delete</a>
+                    <a href="/delete/{{recipe.id}}">Delete</a>
                 </td>
             </tr>
             {% endfor %}
