--- a/Core/templates/index.html
+++ b/Core/templates/index.html
@@ -86,7 +86,8 @@
 
     <div style="display: flex; justify-content: center; margin-top: 100px;">
         <button onclick="location.href = '/add';" style="margin: 0 10px;height: 30px;width: 70px;">Add</button>
-        <button style="margin: 0 10px;height: 30px;width: 70px;">Export</button>
+        <button onclick="location.href = '/export';" style="margin: 0 10px;height: 30px;width: 70px;">Export</button>
+
         <button style="margin: 0 10px;height: 30px;width: 70px;">Import</button>
     </div>
 </body>
