Added Add Recipe for GUI

--- a/Core/templates/add.html
+++ b/Core/templates/add.html
@@ -1,1 +1,100 @@
-hello world
+<!-- add.html -->
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Add Recipe</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+
+    <style>
+        /* Add your custom CSS styles here */
+    </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+    $('#num_ingredients').on('input', function () {
+        var numIngredients = parseInt($(this).val());
+        var container = $('#ingredients-container');
+        container.empty(); // Clear previous fields
+
+        for (var i = 0; i < numIngredients; i++) {
+            var inputField = '<label for="ingredient_name_' + i + '">Ingredient Name:</label>' +
+                '<input type="text" id="ingredient_name_' + i + '" name="ingredient_name_' + i + '" required><br>' +
+                '<label for="ingredient_quantity_' + i + '">Quantity:</label>' +
+                '<input type="text" id="ingredient_quantity_' + i + '" name="ingredient_quantity_' + i + '" required><br>' +
+                '<label for="ingredient_measurement_' + i + '">Measurement:</label>' +
+                '<input type="text" id="ingredient_measurement_' + i + '" name="ingredient_measurement_' + i + '" required><br><br>';
+            container.append(inputField);
+        }
+    });
+
+            $('#num_steps').on('input', function () {
+                var numSteps = parseInt($(this).val());
+                var container = $('#instructions-container');
+                container.empty(); // Clear previous fields
+
+                for (var i = 0; i < numSteps; i++) {
+                    var stepNumber = i + 1;
+                    var inputField = '<label for="instruction_' + i + '">Step ' + stepNumber + ':</label>' +
+                        '<input type="text" id="instruction_' + i + '" name="instruction_' + i + '" required><br>';
+                    container.append(inputField);
+                }
+            });
+        });
+    </script>
+</head>
+
+<body>
+    <h1>Add Recipe: </h1>
+    <!-- Rest of the edit form -->
+
+    <form action="{{ url_for('add') }}" method="POST">
+
+        <!-- <label for="recipe_name">Recipe ID:</label>
+        <input type="text" id="recipe_id" name="recipe_id" required> -->
+
+        <label for="recipe_name">Recipe Name:</label>
+        <input type="text" id="recipe_name" name="recipe_name" required>
+
+        <label for="recipe_author">Author:</label>
+        <input type="text" id="recipe_author" name="recipe_author" required>
+
+        <label for="prep_time">Preparation Time (minutes):</label>
+        <input type="number" id="prep_time" name="prep_time" required><br><br>
+
+        <label for="cook_time">Cook Time (minutes):</label>
+        <input type="number" id="cook_time" name="cook_time" required><br><br>
+
+        <label for="serving_size">Serving Size:</label>
+        <input type="text" id="serving_size" name="serving_size" required><br><br>
+
+        <label>Ingredients:</label>
+        <br>
+        <label for="num_ingredients">Number of Ingredients:</label>
+        <input type="number" id="num_ingredients" name="num_ingredients" min="1" required>
+        <br>
+        <br>
+        <div id="ingredients-container"></div>
+        
+        
+
+        <label>Instructions:</label>
+        <br>
+        <label for="num_steps">Number of Steps:</label>
+        <input type="number" id="num_steps" name="num_steps" min="1" required>
+        <br>
+        <br>
+        <div id="instructions-container"></div>
+
+        <input type="submit" value="Add Recipe">
+    </form>
+
+    <h1>
+        <a href="/">
+            Home
+        </a>
+    </h1>
+</body>
+
+</html>
