--- a/Core/templates/index.html
+++ b/Core/templates/index.html
@@ -98,7 +98,7 @@
         <button onclick="location.href = '/add';" style="margin: 0 10px;height: 30px;width: 70px;">Add</button>
         <button onclick="location.href = '/export';" style="margin: 0 10px;height: 30px;width: 70px;">Export</button>
 
-        <button style="margin: 0 10px;height: 30px;width: 70px;">Import</button>
+        <button onclick="location.href = '/import';" style="margin: 0 10px;height: 30px;width: 70px;">Import</button>
         <button onclick="location.href = '/exit';" style="margin: 0 10px;height: 30px;width: 70px;">Exit GUI</button>
     </div>
 </body>
