the final commit.

--- a/Core/templates/index.html
+++ b/Core/templates/index.html
@@ -10,24 +10,27 @@
             background-color: skyblue;
         } */
     </style>
+
+
 </head>
 
 <body>
-    <!-- {% if exitBool %}
-    <div id="exitPrompt">
-        <div id="exitBox">
-            <h3>Important Notice: Exiting the GUI will not cause of loss of data from Recipe Manager. Data can still be saved from the command shell after exiting GUI. Click Export on homepage to save data from the GUI.</h3>
-            <p>Enter the following command in the shell to exit GUI: gui deactivate<br/><br/>
-                <a href="/">Close</a>
-        </div>
-    </div>
-    {% endif %} -->
+    {% if exitBool %}
+    <script>
+        alert('Input deactivation command in the command shell: gui deactivate')
+        window.location.replace("/");
+
+
+    </script>
+    {% endif %}
+
 
     {% if recipe_name %}
     <div id="deletePrompt">
         <div id="deleteBox">
-            <p>Are you sure you want to delete {{ recipe_name }}?<br/><br/>
-                <a href="/deleteConfirm/{{recipe_id}}">Yes</a><a href="/">No</a></p>
+            <p>Are you sure you want to delete {{ recipe_name }}?<br /><br />
+                <a href="/deleteConfirm/{{recipe_id}}">Yes</a><a href="/">No</a>
+            </p>
         </div>
     </div>
     {% endif %}
@@ -98,7 +101,7 @@
         <button onclick="location.href = '/add';" style="margin: 0 10px;height: 30px;width: 70px;">Add</button>
         <button onclick="location.href = '/export';" style="margin: 0 10px;height: 30px;width: 70px;">Export</button>
 
-        <button style="margin: 0 10px;height: 30px;width: 70px;">Import</button>
+        <button onclick="location.href = '/import';" style="margin: 0 10px;height: 30px;width: 70px;">Import</button>
         <button onclick="location.href = '/exit';" style="margin: 0 10px;height: 30px;width: 70px;">Exit GUI</button>
     </div>
 </body>
